[package]
name = "forge_common"
version = "0.1.0"
edition = "2021"
description = "Library for dealing with forge servers"
license = "GPL-3.0-or-later" #GPL-3.0 or any later version
repository = "https://github.com/codemonkey76/forge_site_mover"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
wait-timeout = "0.2.0"
